# adaptive-attack-protection-system

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  PRODUCTION_READINESS_AUDIT.md  README.md  THESIS_VS_CODE_AUDIT.md  docker-compose.yml  pyproject.toml
.github/workflows/: smoke.yml
aaps/: __init__.py  _compat.py  cli.py
aaps/agent/: __init__.py  config.py  deep_agent.py  llm_factory.py  local_agent.py  memory_manager.py  multimodal_retrieval.py  tools.py
aaps/attacks/: __init__.py
aaps/attacks/_core/: __init__.py  base_attack.py  benchmarks.py  config.py  local_agent.py  logging_config.py  model_registry.py  scoring.py
aaps/attacks/data/benchmarks/: jailbreakbench.json
aaps/attacks/legacy/_legacy/: README.md  __init__.py  run_gcg_attack.py  run_search_attack.py
aaps/attacks/legacy/advprompter/: __init__.py  attack.py
aaps/attacks/legacy/crescendo/: __init__.py  attack.py
aaps/attacks/legacy/gcg_variants/: __init__.py  adaptive_gcg_ipi.py  multi_objective_gcg.py  two_stage_gcg.py
aaps/attacks/legacy/gradient_attack/: __init__.py  gcg.py
aaps/attacks/runners/: __init__.py  run_adaptive_attacks.py  run_all_attacks.py  run_human_redteam_attack.py  run_rl_attack.py  run_static_attack.py
aaps/attacks/slim5/: __init__.py
aaps/defenses/: __init__.py  base_defense.py
aaps/defenses/baselines/: __init__.py  a_memguard.py  circuit_breaker.py  constitutional_classifiers.py  data_sentinel.py  firewall.py  granite_guardian.py  llama_guard.py  melon.py  prompt_guard2.py  prompt_guard_filter.py  prompt_guards.py  rag_guard.py  rpo.py  secalign.py  smoothllm.py  struq.py  wildguard_defense.py
aaps/defenses/integrity/: __init__.py  adaptive_feedback.py  l1_channels.py  l2_probe.py  l3_action_consistency.py  l4_output_consistency.py  l5_memory_guard.py  l6_retrieval_guard.py  pipeline.py  trace_logger.py
aaps/defenses/pace/: __init__.py  agentdojo_pipeline.py  agreement.py  clusters.py  executor.py  pipeline.py  plan.py  planner.py  trace_logger.py
aaps/evaluation/: __init__.py  agentdojo_native.py  call_logger.py  defense_benchmark.py  external_benchmarks.py  llm_judge.py  metrics.py
aaps/evaluation/benchmarks/: __init__.py  agentharm.py  tau_bench.py
aaps/scripts/: check_services.py  system_check.py
docs/: README.md  quickstart.md  reproducing_results.md  runnability.md  threat_model.md
notebooks/: 00_setup_and_agent.ipynb  01_static_attacks.ipynb  02_pair_attack.ipynb  03_poisoned_rag_attack.ipynb  04_supply_chain_attack.ipynb  05_deepagent.ipynb  05_pace_defense.ipynb  06_benchmark_comparison.ipynb  07_deep_agent_demo.ipynb  08_agentdojo_benchmark.ipynb  09_adaptive_budget_sweep.ipynb  10_deepagent.ipynb  99_mim_LEGACY.ipynb
scripts/: __init__.py  gen_figures.sh  gen_figures2.sh  gen_figures_final.sh  launch_followup.sh  launch_full_eval.sh  launch_k_sweep_openrouter.sh  launch_pace_matrix.sh  launch_pace_openrouter.sh  monitor_eval.py  repro_trustrag_attack.py  run_agentdojo_suite.py  run_model_matrix.py  run_multiseed_matrix.py  run_pace_k_sweep.py  run_phase2_onwards.sh  run_quickmatrix_demo.py  run_realworld_suites.py  run_sequential_matrix.sh  run_tau_bench_utility.py  run_thesis_experiments.py  summarize_matrix_results.py
scripts/reporting/: __init__.py  aggregate_seeds.py  bind_placeholders.py  make_bar_charts.py  make_thesis_figures.py  parse_pace_telemetry.py  render_thesis_figures.py  render_thesis_tables.py  revalidate_cells.py  verify_pace_acceptance.py
scripts/setup/: __init__.py  download_benchmarks.py  list_cheap_models.py  populate_kb.py  preflight.py  verify_call_logs.py  verify_matrix_integrity.py  verify_no_ollama.py
tests/: test_e2e_mock.py  test_e2e_ollama.py  test_e2e_services.py  test_grpo.py  test_l0_contracts.py  test_l0_runnability.py  test_notebooks.py  test_smoke.py
(+48 files in other folders)
